objects/ESC_EPx__c.object
<CustomObject>
    <description>Enterprise pulse object used to record the surveys that have been sent to customers and their responses.</description>
    <fields>
        <fullName>Date_Time_Sent__c</fullName>
        <description>The date time that the EPx invite was scheduled to be sent</description>
        <inlineHelpText>The date time that the EPx invite was scheduled to be sent</inlineHelpText>
        <label>Date Time Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Answer_10__c</fullName>
        <label>Answer 10</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Answer_1__c</fullName>
        <label>Answer 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Answer_2__c</fullName>
        <label>Answer 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Owner__c</fullName>
        <label>Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Segment__c</fullName>
        <label>Case Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Team_Static__c</fullName>
        <formula>ESC_Case__r.ESC_Case_Owner_Role_Static__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Team (Static)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Team__c</fullName>
        <label>Case Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>ESC_Surveys1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_EPX_Case_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The case owner of the case when the EPs request was initially sent.</description>
        <inlineHelpText>The case owner of the case when the EPs request was initially sent.</inlineHelpText>
        <label>Case Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Enterprise_Pulse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_EPX_Case_Thead_Id__c</fullName>
        <description>Stores the thread id of the associated case so that if the customer replies to the EP then the reply will be attached to the case.</description>
        <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,4) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(ESC_Case__r.Id,5) &amp; SUBSTITUTE(Left(RIGHT(ESC_Case__r.Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(ESC_Case__r.Id,5) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the thread id of the associated case so that if the customer replies to the EP then the reply will be attached to the case.</inlineHelpText>
        <label>Case Thead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPX_Clicktools_Language__c</fullName>
        <description>This is the language that the EPx was completed in. This field should be used on the EPx-Complete Page Layout instead of the other language fields.</description>
        <inlineHelpText>This is the language that the EPx was completed in. This field should be used on the EPx-Complete Page Layout instead of the other language fields.</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_HighScore__c</fullName>
        <label>EPS HighScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Is_Solved_Answer__c</fullName>
        <label>EPS Is Solved - Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Is_Solved_Question__c</fullName>
        <label>EPS Is Solved - Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_LowScore__c</fullName>
        <label>EPS LowScore</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_OverRide__c</fullName>
        <label>EPS Override?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Reopen_Req_Answer__c</fullName>
        <label>EPS - Reopen Requested - Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Reopen_Req_Question__c</fullName>
        <label>EPS - Reopen Requested - Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_AcctUnsub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPS Supress - Acct Unsub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_ContUnsub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EPS Supress - Contact Unsub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_Diagnosis__c</fullName>
        <label>EPS Supress - Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_FreqCap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the Frequency cap is reached for the contact that the survey was intended for</description>
        <label>EPS Supress - Freq Cap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_OwnerRole__c</fullName>
        <label>EPS Supress - Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_Proactive__c</fullName>
        <label>EPS Supress - Proactive Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPs_Supr_SerProCat__c</fullName>
        <label>EPS Supress - Service Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Category__c</fullName>
        <label>EPS Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPs</fullName>
                </value>
                <value>
                    <fullName>EPt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_EPx_Decimal_Score__c</fullName>
        <label>EPS Average Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Expired_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the customer submits a response after the number of days specified in the related template selector then this box will be checked.</description>
        <inlineHelpText>If the customer submits a response after the number of days specified in the related template selector then this box will be checked.</inlineHelpText>
        <label>ESC_EPS_Expired_Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The language that the survey was sent in</description>
        <inlineHelpText>The language that the survey was sent in</inlineHelpText>
        <label>Language</label>
        <referenceTo>Languages__c</referenceTo>
        <relationshipLabel>Enterprise Pulse</relationshipLabel>
        <relationshipName>Enterprise_Pulse</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Template_Selector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ESC_EPS_Template_Selector</label>
        <referenceTo>ESC_EPx_Template_Selector__c</referenceTo>
        <relationshipLabel>Enterprise Pulse</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESC_EPx_Type__c</fullName>
        <label>EPS Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ESC_EPx_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPs - Initial Feedback</fullName>
                </value>
                <value>
                    <fullName>EPs - Subsequent Feedback</fullName>
                </value>
                <value>
                    <fullName>EPs - Sent</fullName>
                </value>
                <value>
                    <fullName>EPs - Supressed</fullName>
                </value>
                <value>
                    <fullName>EPt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_Eps_Supr_NoMatchingTempl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there are not ESC_EPX_Template_Selector records that match the case then the survey will be suppressed and this box will be checked.</description>
        <inlineHelpText>If there are not ESC_EPX_Template_Selector records that match the case then the survey will be suppressed and this box will be checked.</inlineHelpText>
        <label>EPS Supress - No Matching Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ESC_Other_Suppresions__c</fullName>
        <description>If there is not suppression field for a specific decline criteria, this field will annotate any suppression rules that caused that EP to be suppressed.</description>
        <inlineHelpText>If there is not suppression field for a specific decline criteria, this field will annotate any suppression rules that caused that EP to be suppressed.</inlineHelpText>
        <label>ESC Other Suppresions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Question_10__c</fullName>
        <label>Question 10</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Question_1__c</fullName>
        <label>Question 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Question_2__c</fullName>
        <label>Question 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_SurveyComments__c</fullName>
        <label>Survey Comments - Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Aggregate_Score__c</fullName>
        <description>ESC_ This calculates the average of the values in questions 1 to 5, and removing ISBLANK values for the proper average calculation.</description>
        <label>Survey Aggregate Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Comments_Text__c</fullName>
        <description>ESC_Field to hold text of how comments were asked for</description>
        <label>Survey Comments - Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Sent_Time__c</fullName>
        <description>The time that the survey was initially scheduled to be sent</description>
        <label>Survey Sent Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ESC_Survey_Version__c</fullName>
        <label>Survey Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Text_Answer_1__c</fullName>
        <description>ESC_ This field is used to capture the text of a question that is answered in a text instead of a numerical value</description>
        <label>Text Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Text_Question_1__c</fullName>
        <description>ESC_ This field is used to capture the text of a question that is answered in a text instead of a numerical value</description>
        <label>Text Question 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_1__c</fullName>
        <description>ESC_ Used to store the first Yes / no question. This field is not a checkbox so that we can check for ISBLANK values.</description>
        <label>YNAnswer 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Issue has been resolved</fullName>
                    <isActive>false</isActive>
                    <label>Issue has been resolved</label>
                </value>
                <value>
                    <fullName>Issue is still in the process of being resolved</fullName>
                    <isActive>false</isActive>
                    <label>Issue is still in the process of being resolved</label>
                </value>
                <value>
                    <fullName>Issue was not resolved</fullName>
                    <isActive>false</isActive>
                    <label>Issue was not resolved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_2__c</fullName>
        <description>ESC_ Used to store the second Yes / no question. This field is not a checkbox so that we can check for ISBLANK values.</description>
        <label>YNAnswer 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNAnswer_3__c</fullName>
        <label>YNAnswer 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Agree</fullName>
                    <isActive>false</isActive>
                    <label>Agree</label>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                    <isActive>false</isActive>
                    <label>Disagree</label>
                </value>
                <value>
                    <fullName>Neither Agree nor Disagree</fullName>
                    <isActive>false</isActive>
                    <label>Neither Agree nor Disagree</label>
                </value>
                <value>
                    <fullName>SomeWhat Disagree</fullName>
                    <isActive>false</isActive>
                    <label>SomeWhat Disagree</label>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                    <isActive>false</isActive>
                    <label>Strongly Agree</label>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                    <isActive>false</isActive>
                    <label>Strongly Disagree</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_1__c</fullName>
        <label>YNQuestion 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_2__c</fullName>
        <label>YNQuestion 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ESC_YNQuestion_3__c</fullName>
        <label>YNQuestion 3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Text__c</fullName>
        <description>Text version of the expiration date that is passed to the survey link</description>
        <inlineHelpText>Text version of the expiration date that is passed to the survey link</inlineHelpText>
        <label>Expiration Date Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>This is the expiration date that is passed to Clicktools.</description>
        <inlineHelpText>This is the expiration date that is passed to Clicktools.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GLI_Sub_Bu__c</fullName>
        <description>Populating the SUB BU from case details to distinguish between UKI and USL EPS surveys.</description>
        <label>Case_Sub_Bu</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Name__c</fullName>
        <formula>ESC_EPx_Language__r.Language_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Language Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Answer_2__c</fullName>
        <label>Text Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Question_2__c</fullName>
        <label>Text Question 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Survey_Comments_Answer__c</fullName>
        <description>This field is used to hold the translation of any survey comments that have been received.</description>
        <inlineHelpText>This field is used to hold the translation of any survey comments that have been received.</inlineHelpText>
        <label>Translation - Survey Comments - Answer</label>
        <type>TextArea</type>
    </fields>
    <label>Enterprise Pulse</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <columns>ESC_EPx_Type__c</columns>
        <columns>ESC_EPx_Category__c</columns>
        <columns>ESC_EPx_Decimal_Score__c</columns>
        <columns>ESC_Case__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EPS-{0000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Pulse</pluralLabel>
    <recordTypes>
        <fullName>ESC_EPs_Complete</fullName>
        <active>true</active>
        <label>ESC_EPs_Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESC_EPs_Sent</fullName>
        <active>true</active>
        <label>ESC_EPs_Sent</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESC_Eps_Surpressed</fullName>
        <active>true</active>
        <label>ESC_Eps_Surpressed</label>
    </recordTypes>
    <recordTypes>
        <fullName>ESC_Ept</fullName>
        <active>true</active>
        <label>ESC_Ept</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>